Fixes: 	- adjusted price section which is centered properly 	- nav menus are appearing back on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ button {
 .slides img {
   width: 100%;
   height: 100%;
-  /* object-fit: cover; */
+  object-fit: cover;
   flex-shrink: 0;
 }
 
@@ -422,6 +422,7 @@ iframe {
   justify-content: center;
   align-items: center;
   gap: 20px;
+  flex-wrap: wrap;
 }
 #pricing {
   text-align: center;
@@ -594,7 +595,7 @@ footer {
     align-items: flex-end;
   }
   .navbar-toggle {
-    display: flex; /* Show toggle button */
+    display: block; /* Show toggle button */
 
   }
   .nav-links {
@@ -608,7 +609,9 @@ footer {
     display: none;
     z-index: 1; /* Stack above other elements */
   }
-
+.nav-links.show{
+  display: flex;
+}
   .nav-links a {
     padding: 10px 20px; /* Add padding for touch targets */
     text-align: center; /* Center the links */
@@ -643,6 +646,7 @@ footer {
   .pricing-cards {
     flex-direction: column;
     align-items: center;
+    width: 100%;
   }
   .info-container {
     flex-direction: column;
@@ -651,6 +655,7 @@ footer {
   .prices-container {
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
   #pricing h2 {
     text-align: center;
@@ -731,7 +736,7 @@ footer {
   }
   .prices-right {
     /* margin:0 auto; */
-    margin-left: 100px;
+    margin-left: -25px;
   }
   #pricing h2 {
     text-align: center;
